--- a/index.html
+++ b/index.html
@@ -249,6 +249,74 @@
             opacity: 0.9;
         }
 
+        /* Performance Section */
+        .performance {
+            padding: 80px 0;
+            background: white;
+        }
+
+        .performance-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+        }
+
+        .performance-text h2 {
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            color: #333;
+        }
+
+        .performance-text p {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            margin-bottom: 2rem;
+            color: #666;
+        }
+
+        .performance-features {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .perf-item {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            padding: 1rem;
+            background: #f8f9fa;
+            border-radius: 10px;
+            transition: transform 0.3s;
+        }
+
+        .perf-item:hover {
+            transform: translateX(10px);
+        }
+
+        .perf-item i {
+            font-size: 1.5rem;
+            color: #667eea;
+            width: 30px;
+        }
+
+        .perf-item span {
+            font-weight: 600;
+            color: #333;
+        }
+
+        .performance-image {
+            text-align: center;
+        }
+
+        .performance-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
+
         /* Newsletter Section */
         .newsletter {
             padding: 80px 0;
@@ -393,6 +461,15 @@
             .features-grid {
                 grid-template-columns: 1fr;
             }
+
+            .performance-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .performance-text h2 {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
@@ -531,6 +608,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!-- Newsletter Section -->
     <section class="newsletter" id="newsletter">
